# GPU_Programming_Final_Project

./: .gitignore  CMakeLists.txt  README.md
cuda/: camera.cuh  kernels.cuh  material.cuh  obj_load.h  ray.cuh  render.cu  triangle.cuh  vec3.cuh  viewer.cu
docs/: report.tex
gui/: main_gui.cpp  mainwindow.cpp  mainwindow.h  panels.cpp  panels.h  renderer.cu  renderer.h  renderview.cpp  renderview.h  renderworker.cpp  renderworker.h  scene.cpp  scene.h
inc/: hittable.h  hittable_list.h  interval.h  material.h  obj_loader.h  sphere.h  triangle.h
models/: gen_scene.py
src/: main.cc
